# alertbot

./: .gitignore  CHANGELOG.md  alertbot.cabal  cabal.project  hie.yaml
alertbot-discord/: alertbot-discord.cabal
alertbot-discord/app/: Main.hs
alertbot-discord/src/: Alertbot.hs
alertbot-discord/src/Alertbot/: ReactNotify.hs  WatchWords.hs
alertbot-discord/src/Alertbot/Bot/: Commands.hs  Config.hs  Database.hs  EventHandlers.hs  Orphans.hs  Schema.hs  Util.hs
app/: Main.hs
src/Discord/: Alertbot.hs
src/Discord/Alertbot/: Commands.hs  Database.hs  Orphans.hs  Schema.hs
