cabal-version:       2.4

name:                alertbot
version:             0.1.0.0
synopsis:            Get alerts about words and reactions in Discord
-- description:
homepage:            https://github.com/MorrowM/alertbot
bug-reports:         https://github.com/MorrowM/alertbot/issues/
license:             NONE
license-file:        LICENSE
author:              Morrow
maintainer:          themorrowm@gmail.com
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md

common extensions
  default-extensions:
      DataKinds
    , FlexibleContexts
    , GADTs
    , LambdaCase
    , OverloadedLabels
    , OverloadedStrings
    , PolyKinds
    , ScopedTypeVariables
    , TemplateHaskell
    , TypeApplications
    , TypeOperators
    , DeriveGeneric

library
  import:
    extensions
  exposed-modules:
    Discord.Alertbot
    , Discord.Alertbot.Schema
    , Discord.Alertbot.Database
    , Discord.Alertbot.Commands
    , Discord.Alertbot.Orphans

  build-depends:       base ^>=4.13.0.0
    , calamity
    , polysemy
    , di
    , di-polysemy
    , text
    , aeson
    , lens
    , text-show
    , persistent
    , conduit
    , monad-logger
    , persistent
    , persistent-sqlite
    , persistent-template
    , transformers
    , data-flags

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall

executable alertbot
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0, alertbot
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite alertbot-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base ^>=4.13.0.0
