cabal-version:      2.4
name:               alertbot-discord
version:            0.1.0.0
synopsis:           Get alerts about words and reactions in Discord

-- description:
homepage:           https://github.com/MorrowM/alertbot
bug-reports:        https://github.com/MorrowM/alertbot/issues/
license:
license-file:       LICENSE
author:             Morrow
maintainer:         themorrowm@gmail.com

-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

common extensions
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PolyKinds
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:           extensions
  exposed-modules:
    Alertbot
    Alertbot.Bot.Commands
    Alertbot.Bot.Config
    Alertbot.Bot.Database
    Alertbot.Bot.EventHandlers
    Alertbot.Bot.Orphans
    Alertbot.Bot.Schema
    Alertbot.Bot.Util
    Alertbot.ReactNotify
    Alertbot.WatchWords

  build-depends:
    , aeson
    , base               >=4.12     && <5
    , bytestring
    , calamity           ^>=0.1.30.2
    , calamity-commands  ^>=0.1.3.0
    , conduit
    , containers
    , data-default
    , data-flags
    , di
    , di-polysemy
    , generic-lens
    , lens
    , lens-aeson
    , monad-logger
    , optparse-generic
    , persistent
    , persistent-sqlite
    , polysemy
    , re2
    , req
    , text
    , text-show
    , time
    , unboxing-vector

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-name-shadowing -Wno-partial-type-signatures

executable alertbot-discord
  main-is:          Main.hs
  build-depends:
    , alertbot-discord
    , base              >=4.12 && <5

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite alertbot-discord-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  build-depends:    base >=4.12 && <5
